test/pass/lambdas/lambda_apply.lly
define f(g: function(integer => string) => string)
{
    return g(10)
}

f{|a| a.to_s()}
